# MySellerRobot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_TECHNICAL_AUDIT_2026_05_17.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT_ROADMAP.md  Dockerfile  FBS_ORDER_NOTIFICATIONS_FIX_SUMMARY.md  Makefile  OZON_AND_WB_SALES_1_6_4_SUMMARY.md  PRODUCTION_DEBUG_CHECKLIST.md  PROFIT_CALCULATION_FIX.md  PROFIT_FIX_CHANGELOG.md  README.md  REFACTORING_1_6_2_SUMMARY.md  REFACTORING_AND_CRITICAL_FIXES_REPORT.md  REFACTORING_AND_WEB_STABILITY_1_6_2_SUMMARY.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  RELEASE_1_6_3_SUMMARY.md  SUBSCRIPTION_MONETIZATION_ROADMAP.md  TELEGRAM_MESSAGES_REDESIGN_SUMMARY.md  WEB_CABINET_REFACTORING_SUMMARY.md  alembic.ini  check_login_route.py  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_routes_debug.py
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-production.yml
app/: __init__.py
app/api/: __init__.py  error_handlers.py  main.py  telegram_webhook.py  webhooks.py
app/bot/: __init__.py  bot_provider.py  main.py  states.py
app/cli/: __init__.py  backfill_wb_commissions.py  notify_admin_deploy.py  reconcile_payments.py  repair_wb_duplicate_orders.py
app/core/: __init__.py  cache.py  config.py  db.py  exceptions.py  logging.py  redis.py  security.py
app/integrations/: __init__.py  base.py  ozon.py  wb.py  yookassa.py
app/models/: __init__.py  audit.py  base.py  commission_tariffs.py  domain.py  enums.py  finance.py  integrations.py  marketplaces.py  notifications.py  orders.py  ozon_reports.py  products.py  promo_codes.py  reports.py  settings.py  subscriptions.py  users.py  wb_logistics_tariffs.py  wb_reports.py
app/repositories/: __init__.py  accounts.py  base.py  events.py  orders.py  products.py  sync_jobs.py  users.py  web_auth.py
app/schemas/: __init__.py  deployment.py  orders.py  products.py  profit.py  sales.py
app/scripts/: backfill_wb_financial_details.py  sync_wb_promotion_nomenclatures_once.py
app/services/: __init__.py  account_profile_service.py  account_service.py  admin_service.py  alert_service.py  api_key_validation_service.py  audit_log_service.py  company_lookup_service.py  cost_management_service.py  cost_service.py  daily_report_service.py  data_quality_service.py  deployment_service.py  excel_cost_import.py  fbo_digest_service.py  fbs_control_service.py  feature_access_service.py  finance_service.py  history_backfill_service.py  integration_error_classifier.py  log_viewer_service.py  (+44 more)
deploy/: README_DEPLOY.md  backup.sh  install.sh  update.sh
docs/: BACKUP_RESTORE.md  BOT_MENU.md  COMMISSIONS_TARIFFS.md  WEBHOOKS.md
migrations/: __init__.py  env.py  script.py.mako
public/: index.html  manifest.webmanifest  robots.txt  service-unavailable.html  sitemap.xml
scripts/: backup.sh  backup_daily.sh  bot_delete_webhook.sh  bot_get_webhook_info.sh  bot_set_webhook.sh  check_alembic_chain.py  check_web_routes.py  restore.sh
(+449 files in other folders)
