# version: 1.10.1
# description: Project metadata and tooling configuration.
# updated: 2026-05-15
[project]
name = "seller-profit-bot"
version = "1.10.1"
description = "MP Control service for WB and Ozon sellers with bot, web cabinet, subscriptions, and analytics"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram>=3.6,<4",
    "alembic>=1.13,<2",
    "arq>=0.26,<1",
    "asyncpg>=0.31,<1",
    "cryptography>=43,<45",
    "fastapi>=0.111,<1",
    "greenlet>=3.5,<4",
    "httpx>=0.27,<1",
    "openpyxl>=3.1,<4",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "python-dotenv>=1,<2",
    "python-json-logger>=2,<3",
    "python-multipart>=0.0.20,<1",
    "redis>=5,<6",
    "sqlalchemy>=2.0,<3",
    "structlog>=24,<25",
    "uvicorn[standard]>=0.29,<1",
    "yookassa>=3.0,<4",
]

[project.optional-dependencies]
dev = [
    "black>=26,<27",
    "mypy>=1.20,<2",
    "playwright>=1.40,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-httpx>=0.30,<1",
    "ruff>=0.4,<1",
    "types-openpyxl>=3.1,<4",
]
browser = [
    "playwright>=1.40,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "migrations*"]
namespaces = false

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4"]
ignore = ["UP037", "UP043"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
